# Grok

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
browser-lab/: audio-gearing.js  index.html  modern-demo-lab.html
docs/: AGENTS.md  ARCHITECTURE.md  README-sangraha-ui.md
examples/: aurion-directive-v1.example.json
sangraha/: __init__.py  audio_gearing.py  aurion_art_directive.py  cli.py  directive_extractor.py  sangraha.py
tests/: test_directive.py
