[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grokmandala-sangraha"
version = "0.1.0"
description = "Aurion Art Directive v1 + Reversible Sangraha (SVA6) high-fidelity mandala renderer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Rosesnoses & GrokMandala contributors"}
]
keywords = ["mandala", "generative-art", "audio-visual", "steganography", "sangraha", "aurion"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
  "Pillow>=10.0",
  "pydantic>=2.0",
  "numpy>=1.24; python_version >= '3.11'",  # optional but recommended for analysis
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "pytest-cov",
  "mypy>=1.10",
]
audio = [
  "soundfile>=0.12",
  "librosa>=0.10; python_version >= '3.11'",
]
full = [
  "grokmandala-sangraha[audio,dev]",
]

[project.scripts]
sangraha = "sangraha.cli:main"

[project.urls]
Homepage = "https://github.com/Rosesnoses/grokmandala"
Repository = "https://github.com/Rosesnoses/grokmandala"
Issues = "https://github.com/Rosesnoses/grokmandala/issues"

[tool.hatch.build.targets.wheel]
packages = ["sangraha"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
